--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
     "scripts": ["background.js"],
     "persistent": false
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*/*"],
+      "css": ["style.css"]
+    }
+  ],
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
