--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,14 @@
   "description": "Build an Extension!",
   "permissions": ["activeTab", "declarativeContent", "storage"],
   "background": {
-    "scripts": ["background.js"],
+    "page": "background.html",
     "persistent": false
   },
+  "content_security_policy":"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "content_scripts": [
     {
       "matches": ["https://*/*"],
+      "js": ["script.js"],
       "css": ["style.css"]
     }
   ],
